--- a/requirements-collab.txt
+++ b/requirements-collab.txt
@@ -7,6 +7,5 @@ argparse
 scikit-image
 shapely
 # Torch
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.0.1+cu118
+torch==2.0.1
 torchvision
