--- a/requirements-gpu.txt
+++ b/requirements-gpu.txt
@@ -1,17 +1,13 @@
-numpy==1.23.1
 pyyaml==5.1
 Pillow==9.5.0
 setuptools==59.5.0
-fvcore
-filterpy
+numpy==1.23.1 # if you change this everything will break :) 
 pandas
 opencv-python
 argparse
-scikit-image
-shapely
+filterpy==1.4.5
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.10.0+cu113  
 torchvision==0.11.0+cu113
-# Detectron with latest CUDA support
 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
 detectron2
